--- a/app/globals.css
+++ b/app/globals.css
@@ -15,9 +15,8 @@
 }
 
 @font-face {
-  font-family: 'Rubik';
-  src: url("/fonts/Rubik_Vinyl/RubikVinyl-Regular.ttf") format('truetype');
-  font-weight: 700;
+  font-family: 'Grotesk';
+  src: url("/fonts/Grotesk.ttf") format('truetype');
   font-style: normal;
 }
 
@@ -33,23 +32,43 @@
 
   --color-primary-glow: #3b82f6;
 
-  --color-dark: #050100;
-  --color-primary: #26ffff;
-  --color-secondary: #26ffa5;
+
+  --color-dark: #020e0b;
+  --color-primary: #36ff9a;
+  --color-secondary: #7effdc;
   --color-gray: #c9c9c9;
-  --color-white: #f5faff;
+  --color-white: #d8f3dD;
   --animate-spin-slow: spin 3s linear infinite;
   --animate-spin-custom: spin 3s linear infinite;
+  /* --color-mid-green: #1a4d3a; */
+}
+
+body::-webkit-scrollbar {
+  background: transparent !important;
+  width: 10px !important;
+}
+
+body::-webkit-track {
+  background: transparent !important;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #36ff9b;
+  width: 10px !important;
+  border-radius: 10px
 }
 
 html {
   scroll-behavior: smooth;
+  font-family: "Nunito", sans-serif;
 }
 
 .nunito {
   font-family: "Nunito", sans-serif;
-  font-weight: 700;
 }
+
+
+
 
 body {
   max-width: 100vw;
@@ -60,7 +79,7 @@ body {
 .nunito-light {
   font-family: "Nunito-Light", sans-serif;
   font-weight: 300;
-  color: #bbbbbb;
+  color: #7effdd;
   color: #c9c9c9;
 }
 
@@ -73,8 +92,8 @@ body {
   font-family: "Satoshi", sans-serif;
 }
 
-.rubik {
-  font-family: "Rubik", system-ui;
+.grotesk {
+  font-family: "Grotesk", system-ui;
 }
 
 .container {
@@ -93,7 +112,7 @@ body {
 
 
 .swiper-pagination>.swiper-pagination-bullet {
-  background: #26ffffa6 !important;
+  background: #36ff9aa6 !important;
   width: 24px;
   margin: 0 6px !important;
   height: 24px;
@@ -102,12 +121,50 @@ body {
 }
 
 .swiper-pagination>.swiper-pagination-bullet-active {
-  background-color: #26ffff !important;
-  width: 24px;
+  background-color: #36ff9a !important;
   transition: 0.3s;
-  height: 24px;
   border-radius: 7px;
+  position: relative;
+  overflow: hidden;
 }
+
+.swiper-pagination-bullet::before,
+.swiper-pagination-bullet::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.3s;
+  background: transparent;
+}
+
+.swiper-pagination-bullet-active::before {
+  background: #020e0bd6;
+  width: 80%;
+  border-radius: 5px;
+  z-index: 0;
+  height: 80%;
+  --color-primary: #;
+}
+
+.swiper-pagination-bullet-active::after {
+  z-index: 10;
+  background: #36ff9a;
+  width: 50%;
+  border-radius: 3px;
+  height: 50%;
+}
+
+/* 
+.serv-card:hover {
+  transform: scale(1.1, 1.1);
+}
+
+.serv-card:hover .serv-card:not(:hover) {
+  filter: blur(10px);
+  transform: scale(0.9, 0.9);
+} */
 
 @keyframes spin {
   from {
@@ -115,6 +172,28 @@ body {
   }
 
   to {
-    transform: rotate(360deg);
+    transform: rotate(361deg);
+  }
+}
+
+@media screen and (max-width:1150px) {
+  .container {
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .container {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+  }
+
+
+  .swiper-pagination>.swiper-pagination-bullet {
+    width: 20px;
+    margin: 0 4px !important;
+    height: 20px;
+    border-radius: 6px;
   }
 }
